Closed
Bug 604532
Opened 15 years ago
Closed 15 years ago
Copying from location bar copies the old URL (?)
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b7
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: jruderman, Assigned: ehsan.akhgari)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.98 KB,
patch
|
roc
:
review+
roc
:
approval2.0+
|
Details | Diff | Splinter Review |
Using: Firefox trunk on Mac, local build
Steps to reproduce:
1. Cmd+L
2. Right
3. Type "xxx"
4. Cmd+A
5. Cmd+X
Result: the "xxx" part of the URL is not moved to the clipboard.
I've been hitting this bug frequently, with slightly different steps, while trying to copy URLs from Firefox into IRC.
I don't know if this is a Location Bar bug or an Editor bug.
| Reporter | ||
Updated•15 years ago
|
blocking2.0: --- → ?
| Assignee | ||
Comment 1•15 years ago
|
||
I'm pretty sure that this is the editor...
Assignee: nobody → ehsan
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 2•15 years ago
|
||
Meant to set the status to ASSIGNED...
Status: RESOLVED → UNCONFIRMED
Ever confirmed: false
Resolution: FIXED → ---
| Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 3•15 years ago
|
||
The location bar has its own controller for copy and cut operations. Here is the code responsible for grabbing the selected part of the text from the location bar:
<http://mxr.mozilla.org/mozilla-central/source/browser/base/content/urlbarBindings.xml#425>
What's incorrect here is the value returned by selectionEnd. The reason that this happens is that appending the text as done in comment 0 causes us to create a new textframe, and selectionEnd fails to handle that correctly.
| Assignee | ||
Comment 4•15 years ago
|
||
Attachment #483527 -
Flags: review?(roc)
Attachment #483527 -
Flags: approval2.0?
| Assignee | ||
Updated•15 years ago
|
Component: Location Bar → Editor
Product: Firefox → Core
QA Contact: location.bar → editor
Comment on attachment 483527 [details] [diff] [review]
Patch (v1)
Don't we need to fix urlBindings.xml as well? It shouldn't be depending on this.
Attachment #483527 -
Flags: review?(roc)
Attachment #483527 -
Flags: review+
Attachment #483527 -
Flags: approval2.0?
Attachment #483527 -
Flags: approval2.0+
| Assignee | ||
Comment 6•15 years ago
|
||
(In reply to comment #5)
> Comment on attachment 483527 [details] [diff] [review]
> --> https://bugzilla.mozilla.org/attachment.cgi?id=483527
> Patch (v1)
>
> Don't we need to fix urlBindings.xml as well? It shouldn't be depending on
> this.
I don't think there's anything wrong with urlbarBindings.xml. It's realying on selectionStart and selectionEnd, which are APIs that we expose to content. I don't see what's wrong with depending on those APIs.
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs landing]
OK, I see.
blocking2.0: ? → final+
| Assignee | ||
Comment 9•15 years ago
|
||
Flags: in-testsuite+
Whiteboard: [needs landing]
Target Milestone: --- → mozilla2.0b8
| Assignee | ||
Updated•15 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 15 years ago → 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in
before you can comment on or make changes to this bug.
Description
•