Bug 604532 - Copying from the location bar doesn't copy the entire URL if some text has been appended to it; r=roc a=blocking-final+