editor/libeditor/base/nsEditor.cpp
@@ -2335,6 +2335,20 @@ NS_IMETHODIMP nsEditor::InsertTextImpl(const nsAString& aStringToInsert,
               }
             }
           }
+        } else {
+          // The selection might be at the end of the last textnode child,
+          // in which case we can just append to the textnode in question.
+          nsCOMPtr<nsIDOMNode> possibleTextNode;
+          res = children->Item(*aInOutOffset - 1, getter_AddRefs(possibleTextNode));
+          nodeAsText = do_QueryInterface(possibleTextNode);
+          if (nodeAsText) {
+            PRUint32 length;
+            res = nodeAsText->GetLength(&length);
+            if (NS_SUCCEEDED(res)) {
+              *aInOutOffset = PRInt32(length);
+              *aInOutNode = possibleTextNode;
+            }
+          }
         }
       }
     }
